<resources>
    <string name="app_name">Find Your Job</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="team">Команда</string>
    <string name="worked_by">Над приложением работали</string>
    <string name="pasha">Иванов Павел Александрович</string>
    <string name="dasha">Попова Дарья Владимировна</string>
    <string name="sasha">Кашкаров Александр Владимирович</string>
    <string name="valera">Севостьянов Валерий Андреевич</string>
    <string name="vacancy">Вакансия</string>
    <string name="experience">Требуемый опыт</string>
    <string name="description">Описание вакансии</string>
    <string name="skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact">Контактное лицо</string>
    <string name="email">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="similar">Похожие вакансии</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="search_vacancy">Поиск вакансий</string>
    <string name="search">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="nothing_found">Таких вакансий нет</string>
    <string name="nothing_found_regions">Такого региона нет</string>
    <string name="nothing_found_industries">Таких отраслей нет</string>
    <string name="nothing_found_description">Не удалось получить список вакансий</string>
    <string name="failed_to_retrieve_list">Не удалось получить список</string>
    <string name="count_found_vacancies">Найдено %1$d %2$s</string>
    <string name="salary_no_value">Зарплата не указана</string>
    <string name="salary_from">от "%s" "%s"</string>
    <string name="salary_to">до "%s" "%s"</string>
    <string name="salary_from_to">от "%s" до "%s" "%s"</string>
    <string name="favorites_are_empty">Список пуст</string>
    <string name="error_favorites">Не удалось получить список вакансий</string>
    <string name="employment_schedule">"%s", "%s"</string>
    <string name="check_internet">Проверьте подключение к интернету</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="area_selection_header">Выбор места работы</string>
    <string name="filter_country">Страна</string>
    <string name="filter_region">Регион</string>
    <string name="filter_button_approve">Выбрать</string>
    <string name="area_country_header">Выбор страны</string>
    <string name="area_region_header">Выбор региона</string>
    <string name="region_search">Введите регион</string>
    <string name="area">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_the_amount">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="industry_header">Выбор отрасли</string>
    <string name="industry_search">Введите отрасль</string>
    <string name="countries_are_empty">Список стран пуст</string>
    <string name="similar_vacancies">Похожие вакансии</string>

    <plurals name="vacancy_plurals">
        <item quantity="one">Найдена %1$d вакансия</item>
        <item quantity="few">Найдено %1$d вакансии</item>
        <item quantity="many">Найдено %1$d вакансий</item>
        <item quantity="other">Найдено %1$d вакансий</item>
    </plurals>
</resources>
