<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp"/>

    <TextView
        android:id="@+id/team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        style="@style/Medium22"
        android:textColor="@color/black_day_white_night"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"/>

    <TextView
        android:id="@+id/worked_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/worked_by"
        style="@style/Bold32"
        android:textColor="@color/black_day_white_night"
        android:layout_marginTop="51dp"
        app:layout_constraintTop_toBottomOf="@+id/team"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/pasha"
        android:text="@string/pasha"
        style="@style/TeamMember"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/worked_by"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/dasha"
        android:text="@string/dasha"
        style="@style/TeamMember"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@id/pasha"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/sasha"
        android:text="@string/sasha"
        style="@style/TeamMember"
        app:layout_constraintTop_toBottomOf="@id/dasha"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/valera"
        android:text="@string/valera"
        style="@style/TeamMember"
        app:layout_constraintTop_toBottomOf="@id/sasha"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

</androidx.constraintlayout.widget.ConstraintLayout>
