<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginStart="@dimen/_4dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/black_day_white_night" />

        <TextView
            style="@style/Medium22"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter_settings"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/area_field"
        layout="@layout/place_or_industry_unit" />

    <include
        android:id="@+id/industry_field"
        layout="@layout/place_or_industry_unit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54dp"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginVertical="@dimen/_24dp"
        android:hint="@string/expected_salary"
        style="@style/TextFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_the_amount"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_day_white_night"
            android:textAppearance="@style/Regular16" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            style="@style/Regular16"
            android:text="@string/do_not_show_without_salary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/check_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0" />

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginEnd="@dimen/_4dp"
            app:buttonTint="@color/blue"
            android:checked="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginVertical="@dimen/_8dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            style="@style/PrimaryButton"
            android:text="@string/apply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/reset_button" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginBottom="@dimen/_24dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            style="@style/PrimaryButton"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/red"
            android:text="@string/reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
