<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text_view"
        style="@style/Medium22"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingEnd="@dimen/_8dp"
        android:text="@string/favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/empty_favorites_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view">

        <ImageView
            android:id="@+id/empty_favorites_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_172dp"
            android:importantForAccessibility="no"
            android:src="@drawable/empty_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/empty_favorites_text_view"
            style="@style/Medium22"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_44dp"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/favorites_are_empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_favorites_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error_favorites_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view">

        <ImageView
            android:id="@+id/error_favorites_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_156dp"
            android:importantForAccessibility="no"
            android:src="@drawable/error_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_favorites_text_view"
            style="@style/Medium22"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_44dp"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/error_favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_favorites_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
