<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_8dp"
        android:backgroundTint="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/black_day_white_night" />

    <TextView
        android:id="@+id/similar_caption"
        style="@style/Medium22"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/similar_vacancies"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <TextView
        android:id="@+id/search"
        style="@style/Medium22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/search_vacancy"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_filter_off"
        app:layout_constraintBottom_toBottomOf="@id/search"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintTop_toTopOf="@id/search"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/InputEditText"
        style="@style/InputEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <ImageView
        android:id="@+id/icClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_20dp"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/InputEditText"
        app:layout_constraintEnd_toEndOf="@id/InputEditText"
        app:layout_constraintTop_toTopOf="@id/InputEditText" />

    <ImageView
        android:id="@+id/ImageSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/png_search"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toBottomOf="@id/InputEditText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFoundVacancies"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_8dp"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/_16dp"
        android:paddingTop="@dimen/_32dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/progressBarPaging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEditText"
        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginTop="@dimen/_80dp"
        tools:itemCount="5"
        tools:listitem="@layout/item_found_vacancy" />

    <TextView
        android:id="@+id/messageFound"
        style="@style/Regular16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12dp"
        android:background="@drawable/shape_search_field"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="@dimen/_12dp"
        android:paddingVertical="4dp"
        android:text="@string/nothing_found"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toBottomOf="@id/InputEditText"
        app:layout_goneMarginTop="@dimen/_80dp" />

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="@dimen/_36dp"
        android:layout_height="@dimen/_36dp"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_16dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toBottomOf="@id/InputEditText" />

    <ProgressBar
        android:id="@+id/progressBarPaging"
        android:layout_width="@dimen/_36dp"
        android:layout_height="@dimen/_36dp"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_16dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewFoundVacancies" />

    <LinearLayout
        android:id="@+id/placeHolderError"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintTop_toBottomOf="@id/InputEditText">

        <ImageView
            android:id="@+id/imageError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/png_no_internet" />

        <TextView
            android:id="@+id/messageError"
            style="@style/Medium22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/no_internet" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
